Use inkscape to render text in svgs
This allows for text to be scaled correctly

--- a/S2_P1_CS2.tex
+++ b/S2_P1_CS2.tex
@@ -1,9 +1,9 @@
 \documentclass[12pt]{extarticle}
 
 \usepackage{preamble}
-\usepackage{bytefield}
 \usepackage{preamble_code}
-
+\usepackage{preamble_svg}
+\usepackage{bytefield}
 
 \title{Computer Science 2 Notes, Partial 1}
 \date{Semester 2, 2023/2024}
@@ -2086,7 +2086,7 @@ Then, \texttt{find} can just check if the root of the two nodes is the same.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{assets/S2_P1_CS2/union_find.png}
+    \includesvg[width=\textwidth]{assets/S2_P1_CS2/union_find.svg}
     \caption{An example of the union operation on some nodes}
     \label{fig:union_find}
 \end{figure}
