--- a/preamble_svg.sty
+++ b/preamble_svg.sty
@@ -3,4 +3,4 @@
 [2024/04/30 Preamble svg]
 
 \RequirePackage{svg}
-\svgsetup{inkscapepath=./build/aux/svg}
+\svgsetup{inkscapepath=./build/aux/svg, inkscapelatex=false}
