--- a/S2_P2_PROB.tex
+++ b/S2_P2_PROB.tex
@@ -15,6 +15,10 @@
 \newcommand{\Exponential}{{\operatorfont Exponential}}
 \newcommand{\BivariateNormal}{{\operatorfont BivariateN}}
 
+\newcommand{\convas}{\stackrel{\text{a.s.}}{\to}}
+\newcommand{\convdist}{\stackrel{\text{d}}{\to}}
+\newcommand{\convprob}{\stackrel{\text{P}}{\to}}
+
 \renewcommand{\vec}[1]{\uvec{#1}}
 
 \begin{document}
@@ -1510,12 +1514,12 @@ Moreover, we see that \autoref{eq:mgf:taylor} is the taylor expansion of $M_X(t)
     See the book for the full proof.
 \end{proof}
 
-\subsection{Convergence}
+\section{Convergence}
 
 \begin{definition}[convergence in distribution]
     Let $\left(X_n\right)$ be a sequence of random variables.
     We say that $X_n$ converges in distribution to $X$ if $F_{X_n}(x)$ converges to $F_X(x)$ for all $x$ where $F_X$ is continuous.
-    We write $X_n \stackrel{d}{\to} X$.
+    We write $X_n \convdist X$.
 \end{definition}
 
 \begin{example}
@@ -1529,7 +1533,7 @@ Moreover, we see that \autoref{eq:mgf:taylor} is the taylor expansion of $M_X(t)
 \end{example}
 
 \begin{proposition}
-    Let $X_n \stackrel{d}{\to} X$, $a, b \in \R$ such that $F_X$ is continuous in $a$ and $b$.
+    Let $X_n \convdist X$, $a, b \in \R$ such that $F_X$ is continuous in $a$ and $b$.
     Then
     \begin{equation}
         P(a < X_n \leq b) = F_{X_n}(b) - F_{X_n}(a) \to F_X(b) - F_X(a) = P(a < X \leq b)
@@ -1539,14 +1543,14 @@ Moreover, we see that \autoref{eq:mgf:taylor} is the taylor expansion of $M_X(t)
 \begin{theorem}[port manteau]
     The following conditions are equivalent:
     \begin{enumerate}
-        \item $X_n \stackrel{d}{\to} X$
+        \item $X_n \convdist X$
         \item $P(X_n \in B) \to P(X \in B) \enspace \forall B: P(X \in \partial B) = 0$
         \item $E(g(X_n)) \to E(g(X)) \enspace \forall g$ bounded and continuous
     \end{enumerate}
 \end{theorem}
 
 \begin{theorem}
-    If $M_{X_n}(t) \to M_X(t)$ for all $t \in (-a, a)$ then $X_n \stackrel{d}{\to} X$
+    If $M_{X_n}(t) \to M_X(t)$ for all $t \in (-a, a)$ then $X_n \convdist X$
 \end{theorem}
 
 \begin{theorem}[central limit theorem]
@@ -1560,7 +1564,7 @@ Moreover, we see that \autoref{eq:mgf:taylor} is the taylor expansion of $M_X(t)
     such that $E(Z_n) = 0$ and $V(Z_n) = 1$.
     Then
     \begin{equation}
-        Z_n \stackrel{d}{\to} Z \sim \Normal(0, 1)
+        Z_n \convdist Z \sim \Normal(0, 1)
     \end{equation}
 \end{theorem}
 
@@ -1611,5 +1615,157 @@ Moreover, we see that \autoref{eq:mgf:taylor} is the taylor expansion of $M_X(t)
     \end{align}
     which is the mgf of $\Normal(0, 1)$.
 \end{proof}
+
+\subsection{Inequalities}
+
+\begin{theorem}[Markuo inequality]
+    \label{thm:mgf:markuo}
+    Let $X$ be a random variable and $r > 0$ such that $E(\abs{X}^r) < + \infty$.
+    Then
+    \begin{equation}
+        P(\abs{X} \geq K) \leq \frac{E(\abs{X}^2)}{k^r}
+    \end{equation}
+\end{theorem}
+
+\begin{proof}
+    \begin{align}
+        E(\abs{X}^r) & = \int \abs{x}^r f_X (x) \dd{x}                                                                \\
+                     & = \int_{\abs{x} < k} \abs{x}^r f_X (x) \dd{x} + \int_{\abs{x} \geq k} \abs{x}^r f_X (x) \dd{x} \\
+                     & \geq \int_{\abs{x} \geq k} \abs{x}^r f_X (x) \dd{x}                                            \\
+                     & \geq \int_{\abs{x} \geq k} k^r f_X (x) \dd{x}                                                  \\
+                     & = k^r \int_{\abs{x} \geq k} f_X (x) \dd{x}                                                     \\
+                     & = k^r P(\abs{X} \geq k)
+    \end{align}
+\end{proof}
+
+\begin{theorem}[Chebyshev inequality]
+    Let $\mu = E(X)$ and apply \autoref{thm:mgf:markuo} with $r = 2$:
+    \begin{equation}
+        P(\abs{X - \mu} \geq k) \leq \frac{E\left((X - \mu)^2\right)}{k^2} = \frac{\sigma^2}{k^2}
+    \end{equation}
+\end{theorem}
+
+\begin{theorem}[Jensen inequality]
+    Let $U$ a convex set such that $P(X \in U) = 1$, $g : U \to \R$ convex.
+    Then
+    \begin{equation}
+        E(g(X)) \geq g(E(X))
+    \end{equation}
+\end{theorem}
+
+\begin{proof}
+    For simplicity we will assume that $g$ is twice differentiable, such that $g'' \geq 0$.
+    Let $\mu = E(X)$, we have that for some $\tilde{x}$
+    \begin{align}
+        g(x) & = g(\mu) + g'(\mu) (x - \mu) + g''(\tilde{x}) \frac{(x-\mu)^2}{2} \\
+             & \geq g(\mu) + g'(\mu) (x - \mu)
+    \end{align}
+
+    Since this is a property that is valid for any outcome of the experiment we can write
+    \begin{equation}
+        g(X) \geq g(\mu) + g'(\mu)(X - \mu)
+    \end{equation}
+
+    Now take the expectation to get
+    \begin{align}
+        E(g(X)) & \geq E(g(\mu) + g'(\mu)(X - \mu))                \\
+                & = g(\mu) + g'(\mu) \underbrace{E(X - \mu)}_{= 0} \\
+                & = g(\mu)
+    \end{align}
+\end{proof}
+
+\begin{corollary}
+    If $g$ is concave we have that $-g$ is convex, therefore we get
+    \begin{equation}
+        E(-g(X)) \geq -g(E(X))
+    \end{equation}
+    that is
+    \begin{equation}
+        E(g(X)) \leq g(E(X))
+    \end{equation}
+\end{corollary}
+
+\subsection{Different types of convergence}
+
+\begin{definition}[almost sure convergence]
+    Let $(\Omega, \mathcal F, P)$ a probability space, $(X_n)$ be a sequence of random variables and $X$ a random variable.
+    We say that $X_n$ converges to $X$ almost surely if
+    \begin{equation}
+        P\left(\lim_{n \to \infty} X_n = X\right) = 1
+    \end{equation}
+    that is
+    \begin{equation}
+        P\left(\left\{ \omega \in \Omega : \lim_{n \to \infty} X_n(\omega) = X(\omega) \right\}\right) = 1
+    \end{equation}
+
+    Then we write $X_n \convas X$.
+\end{definition}
+
+\begin{definition}[convergence in probability]
+    A sequence $X_n$ converges to $X$ in probability if $\forall \varepsilon > 0$
+    \begin{equation}
+        P(\abs{X_n - X} > \varepsilon) \to 0
+    \end{equation}
+    as $n \to \infty$.
+
+    Then we write $X_n \convprob X$.
+\end{definition}
+
+\begin{theorem}[uniqueness of limit]
+    \skiplineafterproof
+    \begin{enumerate}
+        \item If $X_n \convas X$ and $X_n \convas Y$ then $X = Y$ almost surely
+        \item If $X_n \convprob X$ and $X_n \convprob Y$ then $X = Y$ almost surely
+    \end{enumerate}
+    In both cases we say that the limit is \emph{essentially unique}.
+\end{theorem}
+
+\begin{proof}
+    TODO: oops, should be straight forward.
+\end{proof}
+
+We can now do some more work on almost sure converge.
+We can write that $X_n \convas X$ if and only if $\forall \varepsilon > 0$
+\begin{equation}
+    P(\exists n \geq 1 : \forall k \geq n \abs{X_k - X} \leq \varepsilon) = 1
+\end{equation}
+which is equivalent to
+\begin{equation}
+    P\left( \bigcup_{n = 1}^\infty \bigcap_{k = n}^\infty \left(\abs{X_n - X} \leq \varepsilon\right) \right) = 1
+\end{equation}
+but the argument of the union is increasing, hence we can write
+\begin{equation}
+    \lim_{n \to \infty} P\left( \bigcap_{k = n}^\infty \left( \abs{X_k - X} \leq \varepsilon \right) \right) = 1
+\end{equation}
+then by negating we obtain the equivalent formulation
+\begin{equation}
+    \label{eq:conv:as_alternative}
+    P\left(\bigcup_{k = n}^\infty \left( \abs{X_k - X} > \varepsilon \right)\right) \to 0
+\end{equation}
+
+From this we can prove that almost sure convergence is stronger than convergence in probability.
+
+\begin{theorem}
+    $X_n \convas X \implies X_n \convprob X$.
+\end{theorem}
+\begin{proof}
+    We note that the definition of convergence in probability is always less than \autoref{eq:conv:as_alternative}:
+    \begin{equation}
+        P\left(\abs{X_n - X > \varepsilon}\right) \leq P\left(\bigcup_{k = n}^\infty \left( \abs{X_k - X} > \varepsilon \right)\right) \to 0
+    \end{equation}
+\end{proof}
+
+\begin{theorem}
+    \skiplineafterproof
+    \begin{enumerate}
+        \item \begin{equation}
+                  \sum_{n = 1}^\infty P(\abs{X_n - X} > \varepsilon) < \infty \implies X_n \convas X
+              \end{equation}
+        \item If $(\abs{X_n - X} > \varepsilon) \indep$ then
+              \begin{equation}
+                  X_n \convas X \iff \sum_{n = 1}^\infty P(\abs{X_n - X} > \varepsilon)
+              \end{equation}
+    \end{enumerate}
+\end{theorem}
 
 \end{document}
