--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -931,7 +931,7 @@ We chose the $0 \si{\kelvin}$ to be where it is because at that temperature all 
 
 \subsection{Transformations}
 
-\subsubsection{Adiabatic compression}
+\subsubsection{Reversible adiabatic compression}
 
 We compress the gas of some $\dd{V} < 0$ very slowly such that at every step we give the gas the time to reach a well defined maxwell distribution.
 In this way the gas does not lose energy.
@@ -1001,6 +1001,51 @@ In the case of ideal gasses we will have that
 \begin{equation}
     Q = \frac{3}{2}nR\Delta T
 \end{equation}
+
+\subsubsection{Isobaric transformation}
+
+The property of this transformation is that $p_A = p_B$. We can apply \autoref{eq:gas:perfect} and \autoref{eq:gas:first_principle} to get the heat.
+
+First we can write the difference of internal energy as
+\begin{equation}
+    \Delta U = \frac{3}{2}n R (T_B -T_A)
+\end{equation}
+and the work will be
+\begin{equation}
+    \dd{W} = -p \dd{V} \implies W = -p (V_B - V_A)
+\end{equation}
+but we also know that $pV = nRT$, which means we can write
+\begin{equation}
+    W = -nR (T_B - T_A)
+\end{equation}
+then the heat then will be
+\begin{equation}
+    Q = \frac{5}{2}nR(T_B - T_A)
+\end{equation}
+
+Moreover, by applying the ideal law of gasses to the whole transformation we get
+\begin{equation}
+    \frac{V_A}{T_A} = \frac{V_B}{T_B}
+\end{equation}
+
+\subsubsection{Summary}
+
+\begin{table}[H]
+    \centering
+    \renewcommand{\arraystretch}{2}
+    \begin{tabular}{|c||c|c|c|c|}
+        \hline
+        \textbf{Transformation} & \textbf{Property}                                         & $\bm{\Delta U}$          & $\bm{W}$                   & $\bm{Q}$                  \\
+        \hline
+        Reversible Adiabatic    & $Q = 0 \implies p_A V_A^\gamma = p_B V_B^\gamma$          & $\frac{3}{2}nR\Delta T$  & $\frac{3}{2}nR\Delta T$    & $0$                       \\
+        Irreversible Adiabatic  & $Q = 0$                                                   &$\frac{3}{2}nR\Delta T$&$-p\Delta V$& $0$                       \\
+        Isothermal              & $\Delta T = 0 \implies p_A V_A = p_B V_B$                 & $0$                      & $-nRT\log \frac{V_B}{V_A}$ & $nRT\log \frac{V_B}{V_A}$ \\
+        Isocloric               & $\Delta V = 0 \implies \frac{p_A}{T_A} = \frac{p_B}{T_B}$ & $\frac{3}{2}nR\Delta T$  & $0$                        & $\frac{3}{2}nR\Delta T$   \\
+        Isobaric                & $\Delta p = 0 \implies \frac{V_A}{T_A} = \frac{V_B}{T_B}$ & $\frac{3}{2}nR \Delta T$ & $-nR \Delta T$             & $\frac{5}{2}nR \Delta T$  \\
+        \hline
+    \end{tabular}
+    \caption{Summary of the main transformations}
+\end{table}
 
 \subsection{Heat}
 
